# algo-trade-agent

./: .env.example  README.md  main.py  pyproject.toml  run_live.py
backtest/: engine.py
execution/: live_signal.py  moomoo_executor.py
strategy/: config.py  data.py  portfolio.py  signal.py
