[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strategy", "backtest"]

[project]
name = "algo-trade-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "moomoo-api>=10.6.6608",
    "python-dotenv>=1.2.2",
]

[project.scripts]
run-backtest = "main:main"
